Wed Nov 29 09:41:51 2000  Johnny Willemsen <jwillemsen@remedy.nl>
        * examples/Reactor/Multicast/*.bor
          Added Borland C++ Builder specific makefiles. Thanks to
          Albert Wijna <albert.wijnja@meco.nl> for creating these.

Tue Nov 28 15:39:51 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Print out an error message when the script returns a non-zero
          code.  The errors where reported by email, but they didn't show
          up in the make_pretty output.

Tue Nov 28 15:36:10 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/generate_doxygen.pl:
          Don't generate inline code for releases, it bloats the
          documentation, and does not make things any clearer.

        * html/index.html:
          Fixed URLs

        * etc/ace.doxygen:
        * etc/ace_man.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/tao_dynamicany.doxygen:
        * etc/tao_dynamicinterface.doxygen:
        * etc/tao_esf.doxygen:
        * etc/tao_implrepo.doxygen:
        * etc/tao_iormanip.doxygen:
        * etc/tao_iortable.doxygen:
        * etc/tao_portableserver.doxygen:
        * etc/tao_rtevent.doxygen:
        * etc/tao_strategies.doxygen:
          Make sure that ACE_THROW_SPEC is properly defined.

        * etc/tao.doxygen:
          Also fix the relative path to the ace doxygen files.

Tue Nov 28 13:31:47 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/run_test.pl: prefix exec of run_tests.sh with
          $EXEPREFIX, so that it works without . in the user's
          PATH.  Thanks to Carlos for pointing this out.

Tue Nov 28 08:09:35 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/run_test.pl: added some more diagnostics to try
          to figure out why run_tests.sh can't be exec'd on
          UCI machines.

Mon Nov 27 17:02:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ACE-INSTALL.html:
