@@ -1,3 +1,13 @@
+Wed Nov 29 23:55:37 2000  Pradeep Gore  <pradeep@cs.wustl.edu>
+
+	* orbsvcs/tests/Notify/performance-tests/Throughput/Throughput.cpp:
+	* orbsvcs/orbsvcs/Notify/Notify_EventChannel_i.cpp:
+	  Fixed link errors due to multiple template instantiations.
+
+	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.cpp:
+ 	  Changed <get_primary> to throw TAO_IOP::NotFound () instead of
+	  Invalid_IOR ()
+	
 Wed Nov 29 17:59:10 2000  Pradeep Gore  <pradeep@cs.wustl.edu>
 
 	* examples/Load_Balancing_persistent/Load_Balancer_i.cpp:
