@@ -516,10 +516,6 @@ Worker::svc (void)
 
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 
-template class  ACE_Atomic_Op<ACE_SYNCH_MUTEX, int>;
-
 #elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
-
-#pragma instantiate ACE_Atomic_Op<ACE_SYNCH_MUTEX, int>
 
 #endif /*ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
